# wsjcpp-core

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build_simple.bat  build_simple.sh  wsjcpp.yml
ci/travis/: run.sh
src/: main.cpp  unit_tests.cpp  wsjcpp_core.cpp  wsjcpp_core.h  wsjcpp_unit_tests.cpp  wsjcpp_unit_tests.h  wsjcpp_unit_tests_main.cpp
src.wsjcpp/: CMakeLists.txt
src/resources.wsjcpp/: __src_resources_html_images_favicon_svg_pathc6e5e4.cpp  __src_resources_html_images_favicon_svg_pathc6e5e4.h
src/tests/: CMakeLists.txt  test_create_empty_file.cpp  test_date_time_format.cpp  test_decode_uri_component.cpp  test_directory_list.cpp  test_encode_uri_component.cpp  test_ends_with.cpp  test_extract_dirpath.cpp  test_extract_filename.cpp  test_extract_url_protocol.cpp  test_generate_uuid.cpp  test_get_human_size_bytes.cpp  test_join.cpp  test_make_dirs_path.cpp  test_normalize_path.cpp  test_parent_dirpath.cpp  test_replace_all.cpp  test_resources.cpp  test_split.cpp  test_starts_with.cpp  test_string_padding.cpp  test_to_lower.cpp  test_to_snake_case.cpp  test_to_upper.cpp  test_uint2hex_string.cpp
unit-tests/: CMakeLists.txt
unit-tests.wsjcpp/: .gitignore  CMakeLists.txt  CMakeLists.user-custom.txt  run_unit-tests.sh
unit-tests.wsjcpp/data/: readFileToBuffer.txt
unit-tests.wsjcpp/src/: unit_test_core_extract_filename.cpp  unit_test_core_extract_filename.h  unit_test_core_normalize_path.cpp  unit_test_core_normalize_path.h  unit_test_core_uuid.cpp  unit_test_core_uuid.h  unit_test_create_empty_file.cpp  unit_test_create_empty_file.h  unit_test_create_uuid.cpp  unit_test_create_uuid.h  unit_test_date_time_format.cpp  unit_test_date_time_format.h  unit_test_decode_uri_component.cpp  unit_test_decode_uri_component.h  unit_test_encode_uri_component.cpp  unit_test_encode_uri_component.h  unit_test_ends_with.cpp  unit_test_extract_dirpath.cpp  unit_test_extract_filepath.cpp  unit_test_file_permissions.cpp  unit_test_file_permissions.h  unit_test_get_env.cpp  unit_test_get_env.h  unit_test_get_human_size_bytes.cpp  unit_test_get_human_size_bytes.h  unit_test_ip_v4.cpp  unit_test_ip_v4.h  unit_test_ip_v6.cpp  unit_test_ip_v6.h  unit_test_join.cpp  unit_test_join.h  unit_test_list_of_dirs.cpp  unit_test_list_of_dirs.h  unit_test_make_dirs_path.cpp  unit_test_read_file_to_buffer.cpp  unit_test_read_file_to_buffer.h  unit_test_replace_all.cpp  unit_test_replace_all.h  unit_test_split.cpp  unit_test_split.h  (+11 more)
unit-tests.wsjcpp/src/resources.wsjcpp/: html_images_points_svg_path_835d61.cpp  html_images_points_svg_path_835d61.h
unit-tests/src/: unit_test_core_normalize_path.cpp  unit_test_core_uuid.cpp
